add custom overide theme css
The theme should eventually be redone with flex or grid because there are a number of issues with it.

--- a/01-Oh-CRUD/export/index.html
+++ b/01-Oh-CRUD/export/index.html
@@ -279,7 +279,7 @@
     
         <section >
             
-            <!-- <link rel="stylesheet" href="https://raw.githubusercontent.com/HansUXdev/JavaScript-First/master/theme.css"> -->
+            <link rel="stylesheet" href="../theme.css">
 <h3><a id="user-content-why-learn-mongodb" class="anchor" href="#why-learn-mongodb" aria-hidden="true"></a>Why learn MongoDB?</h3>
 <div class="flex-slide">
 <div class="column" class="block">
